--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.divisionmax.androidthingsmotion">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application>
         <uses-library android:name="com.google.android.things" />
 
